<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_sort">Sort by Name</string>
    <string name="action_clear">Clear</string>
    <string name="icon">ICON</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="item_details">VIEW ITEM DETAILS</string>
    <string name="purchased">Purchased</string>
    <string name="item_name">Item Name</string>
    <string name="item_type">Item Type</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="item_description">Item Description</string>
    <string name="already_purchased">Already Purchased</string>
    <string name="add_new_item">Add New Item</string>
    <string name="clear_alert">Are you sure you want to clear the list?</string>
    <string name="splash_image">SPLASH IMAGE</string>
    <string name="add_button_primary_text">NEW ITEM</string>
    <string name="add_button_secondary_text">Tap here to add a new item to the shopping list.</string>
    <string name="implementation_exception">The Activity does not implement the ShoppingItemHandler interface</string>
    <string name="empty_string_error">This field cannot be empty.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_clear">Confirm Clear</string>
    <string name="clear">Clear</string>
    <string name="action_price">Show Total Price</string>
    <string name="total_price">Total Price of Your Shopping List: $</string>
    <string-array name="categories_array">
        <item>Asians</item>
        <item>Babies</item>
        <item>Bakery</item>
        <item>Beauty and Health</item>
        <item>Books</item>
        <item>Cans and Jars</item>
        <item>Chocolates and Snacks</item>
        <item>Dairy and Eggs</item>
        <item>Drinks</item>
        <item>Fresh Food</item>
        <item>Gluten Free</item>
        <item>Household</item>
        <item>Packets and Cereals</item>
        <item>Pets</item>
    </string-array>
</resources>
