<?xml version="1.0" encoding="utf-8"?><!-- Surface View Start -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp"
    tools:showIn="@layout/shopping_item_row">
    <!--What you want to show in SurfaceView-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5sp"
            android:contentDescription="@string/icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_toEndOf="@id/imIcon"
            android:layout_toRightOf="@id/imIcon"
            android:orientation="vertical"
            android:padding="5sp"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cbPurchased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/purchased" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_details" />

</LinearLayout><!-- Surface View End -->